* This is in preparation to allow the mod to be more configurable with datapacks. And as that requires things to be intuitive.. I had to rename a lot of things. 
* runes, runewords, affixes, sets and unique gears are now fully moddable with datapacks! This might have some issues so i'll need some guniea pigs to test it! 
I tested it myself on client and server but it's not foolproof.
* changed compatible items into datapacks. If you're worried you lose your old progress, there's a command that outputs them into new format: "convert_compatible_items_to_new_format".
Also there's a similar method convertToNewFormat for mod devs that use code. But i strongly suggest they switch to datapacks too. If you need help switching, call me on discord.
It's not really that hard, as the object has a .toJson() method, and that's most of the hard work.

* added recipe for increase map tier item in tinkering station
* most loot crate rewards now cant drop common rarity
* fix loot crates without nbt crashing game
* added map events, for now i added a few simple horde spawn events, these events have a chance to happen every minute in maps
* added divine shield cleric spell
* added poisoned weapons druid spell
* added synergies: blizzard, thunder dash, poisoned weapons
* added a whole new ranger skill tree with its own synergies!
* added new unique items
* disabled my workaround that allowed dimension deletition because it caused server crashes. But now dimensions won't be deleted until forge accepts a PR
* decreased item requirements a bit
* fix runewords
* only 1 unique rune per runed item is now allowed
* fix some heals not working
* reduced boss hp, increased xp and loot
* fixed shield textures
* trying out a new system to balance map drops. Bascically i don't want people spamming them all the time, but i don't want people spending hours insta killing overworld mobs for them either.